--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -12,7 +12,7 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #ffffff);
+  filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -33,22 +33,8 @@
   }
 }
 
-.login-container {
+.card {
   padding: 2em;
-  border-color: #7c7c7cb5;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-}
-
-.login {
-  padding-bottom: 6%;
-}
-
-.senha {
-  padding-bottom: 12%;
 }
 
 .read-the-docs {
